Fix annoying mobile view bug in the dashboard
The application filter box was pushing the page just a bit too wide
in smaller browsers which caused scrollbars to show up.

--- a/app/assets/stylesheets/_projects-index.scss
+++ b/app/assets/stylesheets/_projects-index.scss
@@ -142,6 +142,7 @@ body.projects-index {
     @media all and (max-width: $narrow) {
       width: 100%;
       border-radius: 0;
+      box-sizing: border-box;
     }
 
     nav {
